# allredlib

./: .gitignore  Cargo.toml  Dockerfile  README.md  allredlib.cabal  build.rs  bundle-client.sh  docker-compose-dev-db.yml  docker-compose.yml  old-code-domain-things  package-lock.json  package.json  package.yaml  psc-package.json  stack.yaml  tmp-models  x
app/: DevelMain.hs  devel.hs
client/: .eslintcache  List.purs  Main.purs  StaticBooks.purs  index.html  spago.dhall
client/src/: App.css  App.tsx  Button.purs  Main.purs
config/: keter.yml  models  routes  settings.yml  test-settings.yml
migrations/: 20201206210543_add-creators.sql  20201215234651_add_series.sql  20201216002755_add_attributions.sql  20201216025429_add_subseries.sql  20201219034047_add_subseries_attribution.sql  20201219044350_add_titles.sql  20201222015859_add_genres.sql  20201223030627_add_creator_title.sql  20210214023558_create_user.sql  20210214032229_add_token.sql
seed/: Attribution.json  Creator.json  CreatorTitle.json  Genre.json  GenreTitle.json  Series.json  Subseries.json  Title.json  TitlePagesISBN.json
seeder/: Main.hs  Seeder.hs
src/: Application.hs  BookBinding.hs  BookCondition.hs  Email.hs  Foundation.hs  Genre.hs  Hashing.hs  Language.hs  Model.hs  Seed.hs  UserRole.hs  allredlib-seeder.rs  allredlib-server.rs
src/Handler/: Attribution.hs  Book.hs  Checkout.hs  Comment.hs  Common.hs  Creator.hs  CreatorAttribution.hs  CreatorManifestation.hs  CreatorTitle.hs  Edition.hs  EditionIllustrator.hs  Genre.hs  GenreTitle.hs  Home.hs  Imprint.hs  ImprintPublisher.hs  Manifestation.hs  Printing.hs  Profile.hs  Publisher.hs  SeedDatabase.hs  Series.hs  SeriesAttribution.hs  Subseries.hs  SubseriesAttribution.hs
src/attribution/: model.rs  routes.rs
src/creator/: model.rs  routes.rs
src/creator_title/: model.rs  routes.rs
src/email/: mod.rs
src/genre/: model.rs  routes.rs
src/res/: mod.rs
src/series/: model.rs  routes.rs
src/subseries/: model.rs  routes.rs
src/subseries_attribution/: model.rs  routes.rs
src/title/: model.rs  routes.rs
src/title_genre/: model.rs  routes.rs
src/user/: model.rs  routes.rs
templates/: 404.hamlet  book.hamlet  default-layout-wrapper.hamlet  default-layout.hamlet
