[package]
name = "allredlib"
version = "0.1.0"
authors = ["Nathaniel <neallred@gmail.com>"]
edition = "2018"
default-run = "allredlib-server"
default-build = "allredlib-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.4.1", features = [ "runtime-tokio-rustls", "postgres" ] }
actix-web = "3.3.2"
dotenv = "0.15.0"
anyhow = "1.0.28"
serde = "1.0.106"
serde_json = "1.0.51"
futures = "0.3.8"
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10", features = ["json"] }

[[bin]]
name = "allredlib-server"
path = "src/allredlib-server.rs"

[[bin]]
name = "allredlib-seeder"
path = "src/allredlib-seeder.rs"
