name:                allredlib
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/neallred/allredlib#readme
license:             BSD3
license-file:        LICENSE
author:              Nathaniel Allred here
maintainer:          neallred@allred
copyright:           2019 Nathaniel Allred here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable server
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , wai-app-static >= 3.1.6 && < 4
                     , warp >= 3.2.28 && < 4 
